--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="ja">
   <head>
     <meta charset="UTF-8" />
-    <link rel="icon" type="image/svg+xml" href="/vite.svg" />
+    <link rel="icon" type="image/svg+xml" href="/calculator.svg" />
     <meta name="viewport" content="width=device-width" />
     <title>FGO Damage Roadmap</title>
   </head>
